CSS & JS overflow fixes
Bugfix for table headers overflowing when going past the screen's edge,
Bugfix for JS-activated tooltips going past the screen's edge if the
table is too wide.

--- a/BrainPortal/public/stylesheets/dynamic-table.css
+++ b/BrainPortal/public/stylesheets/dynamic-table.css
@@ -45,7 +45,7 @@
   font-family: inherit;
   padding: 0.2em 0em 0.2em 0.9em;
   text-align: inherit;
-  white-space: normal;
+  white-space: nowrap;
 }
 
 .dt-body > tr > td {
@@ -114,9 +114,8 @@
 /* headers */
 .dt-hdr {
   display: inline-block;
-  float: left;
   margin-top: 1px;
-  padding-right: 2em;
+  padding-right: 4em;
 }
 
 .dt-filter-btn,
@@ -140,6 +139,7 @@
   position: absolute;
   text-align: left;
   top: 2.7em;
+  white-space: normal;
   z-index: 1;
 }
 
@@ -151,6 +151,14 @@
   font-weight: normal;
   padding: 0.6em;
   text-align: left;
+}
+
+.dt-popup > table > thead > tr > th,
+.dt-popup > table > thead > tr > td,
+.dt-popup > table > tbody > tr > td {
+  padding: 0;
+  text-align: left;
+  white-space: normal;
 }
 
 .dt-pop-title {
@@ -234,14 +242,6 @@ td.dt-sel > .dt-sel-lbl > .dt-sel-icon {
   margin: 0.2em 0.4em;
   padding: inherit;
   text-align: left;
-}
-
-.dt-popup > table > thead > tr > th,
-.dt-popup > table > thead > tr > td,
-.dt-popup > table > tbody > tr > td {
-  padding: 0;
-  text-align: left;
-  white-space: normal;
 }
 
 .dt-fpop-find-icon.ui-icon {
